# gdb-pretty-printer-reminder

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  docker-reminder.md  gdbinit-reminder.txt  main.cpp  my_gdb_autoload.py.in  setup.sh
alternative/: .gdbinit.bak  autoload.py
my_gdb_pretty_printers/: custom_printers.py
